Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13466

BUG: unable to handle kernel NULL pointer dereference in class_exp2cliimp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • Lustre 2.14.0
    • 3
    • 9223372036854775807

      When testing Kerberos, hitting kernel crash:

      [  735.342788] LDISKFS-fs (dm-10): file extents enabled, maximum tree depth=5
      [  735.343064] LDISKFS-fs (dm-7): file extents enabled, maximum tree depth=5
      [  735.357831] LDISKFS-fs (dm-10): mounted filesystem with ordered data mode. Opts: errors=remount-ro,no_mbcache,nodelalloc
      [  735.358744] LDISKFS-fs (dm-7): mounted filesystem with ordered data mode. Opts: errors=remount-ro,no_mbcache,nodelalloc
      [  735.442190] LustreError: 4052:0:(gss_keyring.c:879:gss_sec_lookup_ctx_kr()) failed request key: -128
      [  735.445364] LustreError: 4052:0:(sec.c:450:sptlrpc_req_get_ctx()) req ffff88d1ba531200: fail to get context
      [  735.448484] LustreError: 4052:0:(obd_mount.c:473:lustre_start_mgc()) connect failed -111
      [  735.451188] LustreError: 4052:0:(obd_mount_server.c:1599:server_put_super()) no obd vLustre-OST0000
      [  735.454147] LustreError: 4052:0:(obd_mount_server.c:133:server_deregister_mount()) vLustre-OST0000 not registered
      [  735.492294] BUG: unable to handle kernel NULL pointer dereference at 0000000000000100
      [  735.495021] IP: [<ffffffffc09604f6>] class_exp2cliimp+0x6/0x30 [obdclass]
      [  735.497498] PGD 8000000130a21067 PUD 1361f8067 PMD 0 
      [  735.499316] Oops: 0000 [#1] SMP 
      [  735.500504] Modules linked in: osp(OE) ofd(OE) lfsck(OE) ost(OE) ptlrpc_gss(OE) mgc(OE) ko2iblnd(OE) osd_ldiskfs(OE) lquota(OE) ldiskfs(OE) lustre(OE) lmv(OE) mdc(OE) osc(OE) lov(OE) fid(OE) fld(OE) ksocklnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) libcfs(OE) ipmi_devintf ipmi_msghandler rdma_ucm(OE) ib_ucm(OE) rdma_cm(OE) iw_cm(OE) ib_ipoib(OE) ib_cm(OE) dell_rbu ib_umad(OE) mlx5_ib(OE) mlx5_core(OE) mlxfw(OE) mlx4_en(OE) ptp pps_core mlx4_ib(OE) ib_uverbs(OE) ib_core(OE) mlx4_core(OE) mlx_compat(OE) devlink dcdbas iosf_mbi crc32_pclmul ppdev ghash_clmulni_intel dm_round_robin aesni_intel lrw gf128mul glue_helper ablk_helper cryptd joydev pcspkr virtio_balloon sg parport_pc parport i2c_piix4 dm_multipath auth_rpcgss sunrpc ip_tables ext4 mbcache jbd2 sr_mod cdrom sd_mod crc_t10dif crct10dif_generic
      [  735.525588]  ata_generic pata_acpi cirrus virtio_scsi virtio_blk drm_kms_helper virtio_net syscopyarea sysfillrect sysimgblt fb_sys_fops ttm drm ata_piix libata crct10dif_pclmul crct10dif_common crc32c_intel serio_raw virtio_pci virtio_ring floppy virtio drm_panel_orientation_quirks dm_mirror dm_region_hash dm_log dm_mod
      [  735.534629] CPU: 1 PID: 4053 Comm: mount.lustre Kdump: loaded Tainted: G           OE  ------------   3.10.0-1062.1.1.el7_lustre.ddn3.x86_64 #1
      [  735.538591] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [  735.540213] task: ffff88d1ab72c1c0 ti: ffff88d1a9a8c000 task.ti: ffff88d1a9a8c000
      [  735.542326] RIP: 0010:[<ffffffffc09604f6>]  [<ffffffffc09604f6>] class_exp2cliimp+0x6/0x30 [obdclass]
      [  735.545186] RSP: 0018:ffff88d1a9a8f7f0  EFLAGS: 00010246
      [  735.546813] RAX: 0000000000000001 RBX: ffff88d1b6aa7c00 RCX: 0000000000000000
      [  735.548795] RDX: 0000000000000000 RSI: 0000000000000000 RDI: 0000000000000000
      [  735.550777] RBP: ffff88d1a9a8f8b0 R08: 0000000000000010 R09: 000000000000ffef
      [  735.552863] R10: 0000000000000001 R11: 000000000000000f R12: ffff88d1a9a8f838
      [  735.555170] R13: 0000000000000000 R14: ffff88d1a9a8f900 R15: ffff88d1a9a8f8f8
      [  735.557473] FS:  00007f3a7184c840(0000) GS:ffff88d23fd00000(0000) knlGS:0000000000000000
      [  735.559864] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [  735.561664] CR2: 0000000000000100 CR3: 00000001317d2000 CR4: 00000000001606e0
      [  735.564104] Call Trace:
      [  735.564964]  [<ffffffffc0f00784>] ? mgc_enqueue.isra.7.constprop.15+0xa4/0x330 [mgc]
      [  735.567456]  [<ffffffffc0f022a0>] ? mgc_apply_recover_logs+0x13d0/0x13d0 [mgc]
      [  735.569942]  [<ffffffffc0c3b980>] ? ldlm_expired_completion_wait+0x220/0x220 [ptlrpc]
      [  735.572410]  [<ffffffffc0f06273>] mgc_process_log+0x183/0x8f0 [mgc]
      [  735.574704]  [<ffffffffc0ca65d2>] ? sptlrpc_conf_get+0x252/0x2d0 [ptlrpc]
      [  735.577061]  [<ffffffffc0f06eac>] do_config_log_add+0x4cc/0x570 [mgc]
      [  735.579049]  [<ffffffffc0f06ffb>] config_log_find_or_add+0xab/0xd0 [mgc]
      [  735.581167]  [<ffffffffc0985f80>] ? class_config_dump_handler+0x7e0/0x7e0 [obdclass]
      [  735.583702]  [<ffffffffc0f08062>] mgc_process_config+0xdc2/0x13f0 [mgc]
      [  735.586747]  [<ffffffffc0989b98>] lustre_process_log+0x2d8/0xad0 [obdclass]
      [  735.589589]  [<ffffffffc0819037>] ? libcfs_debug_msg+0x57/0x80 [libcfs]
      [  735.597121]  [<ffffffffc09748f9>] ? lprocfs_counter_add+0xf9/0x160 [obdclass]
      [  735.600130]  [<ffffffffc09b9254>] server_start_targets+0x13a4/0x2a20 [obdclass]
      [  735.603218]  [<ffffffffc098cc20>] ? lustre_start_mgc+0x260/0x2510 [obdclass]
      [  735.606033]  [<ffffffffc0985f80>] ? class_config_dump_handler+0x7e0/0x7e0 [obdclass]
      [  735.608689]  [<ffffffffc09bb99c>] server_fill_super+0x10cc/0x1890 [obdclass]
      [  735.610861]  [<ffffffffc098fa78>] lustre_fill_super+0x468/0x960 [obdclass]
      [  735.612923]  [<ffffffffc098f610>] ? lustre_common_put_super+0x270/0x270 [obdclass]
      [  735.615149]  [<ffffffffb8c4c67f>] mount_nodev+0x4f/0xb0
      [  735.616825]  [<ffffffffc09879e8>] lustre_mount+0x38/0x60 [obdclass]
      [  735.618698]  [<ffffffffb8c4d1fe>] mount_fs+0x3e/0x1b0
      [  735.620327]  [<ffffffffb8c6b387>] vfs_kern_mount+0x67/0x110
      [  735.622069]  [<ffffffffb8c6dadf>] do_mount+0x1ef/0xce0
      [  735.623727]  [<ffffffffb8c4521a>] ? __check_object_size+0x1ca/0x250
      [  735.625622]  [<ffffffffb8c2368c>] ? kmem_cache_alloc_trace+0x3c/0x200
      [  735.627498]  [<ffffffffb8c6e913>] SyS_mount+0x83/0xd0
      [  735.629056]  [<ffffffffb918cede>] system_call_fastpath+0x25/0x2a
      [  735.630820] Code: e5 74 12 48 8b 87 00 01 00 00 5d c3 66 0f 1f 84 00 00 00 00 00 31 c0 5d c3 66 90 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 44 00 00 55 <48> 8b 87 00 01 00 00 48 89 e5 48 85 c0 74 0b 48 8b 80 28 05 00 
      [  735.637767] RIP  [<ffffffffc09604f6>] class_exp2cliimp+0x6/0x30 [obdclass]
      [  735.639895]  RSP <ffff88d1a9a8f7f0>
      [  735.641312] CR2: 0000000000000100
      

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: