LU-13466 mgc: protect from NULL exp in mgc_enqueue()

Return an error in mgc_enqueue() is exp parameter is NULL.
Otherwise, it might crash in class_exp2cliimp().

Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I9be0bf57c6a21c83abb08b261f548128114c33f2
Reviewed-on: https://review.whamcloud.com/38280
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>